This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

30-Jun-2001 (Lars Duening)  (3.3.70)
    - (hosts/os2) Updated the OS/2 port (provided by Bart).

30-Jun-2001 (Lars Duening)  (3.3.69)
    - (prolang.y) Relaxed type checking somewhat so that a non-mixed
        function argument can be redefined to mixed, and vice versa
        (suggested by Gnomi)
    - (lex.c) Escaped character constants in inline closures weren't
        recognized (reported by Freaky and Gnomi)
    - (doc/LPC/comments) New.
    - (configure.in) When using mySQL, also check for libnsl.
    - (configure.in) The mySQL path is now used for both include
        and library searches.

29-Jun-2001 (Lars Duening)  (3.3.68)
    - (prolang.y) Accidentally it was no longer possible to redefine 
        privately inherited variables (reported by Gnomi).
    - (actions.c, simulate.c) New hook H_SEND_NOTIFY_FAIL to deliver
        the notify fail message. It is meant for those muds who want
        control over the command flow without having to implement everything
        themselves via the H_COMMAND hook. This hook is still experimental
        and may change in details (suggested by Gnomi).
    - (prolang.y) It is now possible to define a default visibility
        for functions and variables (see doc/LPC/modifiers) (suggested
        by Freaky).

29-Jun-2001 (Lars Duening)  (3.3.67)
    - (main.c) Commandline arguments can now be read from a textfile, using
        new commandline option '--args'. These argument files can be nested.
        (suggested by Elric)

28-Jun-2001 (Lars Duening)  (3.3.66)
    - (configure) The evaluation of the '--with-wizlist-file' configuration
        option was less than flawless.
    - (main.c) Instead of scanning the arguments twice, all encountered
        -f options are stored in a temporary list and evaluated when
        it's time.