@@ -120,6 +120,7 @@ Lars Duening thanks:
      Acius (acius@bigfoot.com)
      Alex@TubMud (at16@st-andrews.ac.uk)
      Alexander Fetke (alfebtcd@cs.tu-berlin.de, Alfe@Tubmud)
+     Alexander Dobrinescu (ad@artifacts.de, Lev@FinalFrontier)
      Anders Strandloev Elkjaer (ase@cs.auc.dk)
      Andre Meiske (guandalug@magellan.tat.physik.uni-tuebingen.de)
      Andreas Grammlich (andreas.grammlich@prepress.de, Gum@Wunderland)
