@@ -22,12 +22,13 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 70)
-(Parent-Version lpmud 3-3 69)
-(Version-Log "Added new port to OS/2")
+(Project-Version lpmud 3-3 71)
+(Parent-Version lpmud 3-3 70)
+(Version-Log "configure had a few small errors.
+'//' comments didn't like to be terminated by the end of file.")
 (New-Version-Log
 "")
-(Checkin-Time "Sun, 01 Jul 2001 01:46:07 -0600")
+(Checkin-Time "Sun, 01 Jul 2001 22:08:00 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -59,25 +60,25 @@
   ;; Information about the driver and the distribution in general
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.3 644))
-  (CREDITS (lpmud/d/22_CREDITS 1.70.1.19 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.133 644))
+  (CREDITS (lpmud/d/22_CREDITS 1.70.1.20 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.134 644))
   (HISTORY (lpmud/f/49_HISTORY 1.186 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.12 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
   ;; Configuration
-  (src/configure (lpmud/d/0_configure 1.19.1.30 755))
+  (src/configure (lpmud/d/0_configure 1.19.1.31 755))
   (src/config.h.in (lpmud/d/1_config.h 1.41.1.4.1.8 644))
   (src/machine.h.in (lpmud/b/9_machine.h. 1.9.1.3 644))
   (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.29 644))
   (src/mkinstalldirs (lpmud/C/4_mkinstalld 1.1 644))
   (src/install-sh (lpmud/C/5_install-sh 1.2 755))
 
-  (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.18 644))
+  (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.19 644))
   (src/autoconf/acconfig.h (lpmud/d/10_acconfig.h 1.6.1.3 644))
 
   (src/settings/README (lpmud/C/22_README 1.14.1.3 644))
-  (src/settings/default (lpmud/C/23_default 1.13.1.5.1.8 744))
+  (src/settings/default (lpmud/C/23_default 1.13.1.5.1.9 744))
   (src/settings/native (lpmud/C/9_native 1.5 744))
   (src/settings/compat (lpmud/C/10_compat 1.6 744))
   (src/settings/alatia (lpmud/J/27_alatia 1.3 744))
@@ -99,7 +100,7 @@
   (src/settings/silberland (lpmud/C/26_silberland 1.4.1.2 744))
   (src/settings/sticklib (lpmud/D/14_sticklib 1.2.1.1.1.2 744))
   (src/settings/tubmud (lpmud/C/27_tubmud 1.7.1.5 744))
-  (src/settings/unitopia (lpmud/C/7_unitopia 1.6.1.4.1.6 744))
+  (src/settings/unitopia (lpmud/C/7_unitopia 1.6.1.4.1.7 744))
   (src/settings/wunderland (lpmud/D/24_wunderland 1.3.1.2 744))
 
   (src/C_COMPILER_BUGS (lpmud/d/21_C_COMPILER 1.6.1.2 644))
@@ -142,7 +143,7 @@
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.18 644))
   (src/interpret.c (lpmud/b/14_interpret. 1.125.1.67 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.8 644))
-  (src/lex.c (lpmud/b/12_lex.c 1.62.1.46 644))
+  (src/lex.c (lpmud/b/12_lex.c 1.62.1.47 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.5 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.35 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.7 644))
@@ -412,7 +413,7 @@
   (src/bugs/b-010610-0 (lpmud/M/22_b-010610-0 1.1 644) :no-keywords)
   (src/bugs/b-010610-1 (lpmud/M/23_b-010610-1 1.1 644) :no-keywords)
 
-  (src/bugs/f-summary (lpmud/C/37_f-summary 1.39.1.21 644) :no-keywords)
+  (src/bugs/f-summary (lpmud/C/37_f-summary 1.39.1.22 644) :no-keywords)
   (src/bugs/f-981027-0 (lpmud/g/29_f-981027-0 1.2 644) :no-keywords)
   (src/bugs/f-981027-1 (lpmud/g/28_f-981027-1 1.2 644) :no-keywords)
   (src/bugs/f-981027-2 (lpmud/g/27_f-981027-2 1.2 644) :no-keywords)
@@ -581,6 +582,7 @@
   (src/bugs/f-010615-0 (lpmud/M/30_f-010615-0 1.1 644) :no-keywords)
   (src/bugs/f-010615-1 (lpmud/M/31_f-010615-1 1.1 644) :no-keywords)
   (src/bugs/f-010615-2 (lpmud/M/32_f-010615-2 1.1 644) :no-keywords)
+  (src/bugs/f-010701 (lpmud/M/39_f-010701 1.1 644) :no-keywords)
 
   (src/bugs/p-981027-1 (lpmud/g/25_p-981027-1 1.2 644) :no-keywords)
   (src/bugs/doomdark/strutil.c (lpmud/g/31_strutil.c 1.2 644) :no-keywords)
@@ -980,7 +982,7 @@
   (doc/LPC/closures-abstract (lpmud/c/50_closures 1.4.1.2 644))
   (doc/LPC/closures-example (lpmud/r/16_closures-e 1.7 644))
   (doc/LPC/closure_guide (lpmud/r/17_closure_gu 1.7.1.2 644))
-  (doc/LPC/comments (lpmud/M/35_comments 1.1 644))
+  (doc/LPC/comments (lpmud/M/35_comments 1.2 644))
   (doc/LPC/do-while (lpmud/r/18_do-while 1.3 644))
   (doc/LPC/ed0 (lpmud/r/19_ed0 1.2 644))
   (doc/LPC/ed1 (lpmud/r/20_ed1 1.3 644))
