@@ -216,7 +216,7 @@ with_swap_file=LP_SWAP.3
 
 # The name of the file (relative to the mudlib) to hold the Wizlist
 # information. The driver reads it on startup.
-# If disabled ('without_wizlist_file'), a wizlist file can still be
+# If disabled ('with_wizlist_file=no'), a wizlist file can still be
 # given on the commandline.
 
 with_wizlist_file=WIZLIST
